Issue #42 Allow editing food shopping flag
Implement editing food shopping flag and conflict resolution

Add interactor to edit shopping flag in isolation
